--- a/style.css
+++ b/style.css
@@ -371,6 +371,7 @@ nav {
  right: 150px;
  box-sizing: border-box;
  box-shadow: 0px 0px 10px 0px #666666;
+ border-radius: 10px;
  width: 500px;
  height: 300px;
 
@@ -461,7 +462,7 @@ align-items: center;
 
 /* Footer */
 footer {
-  background: blanchedalmond;
+  background: green;
   line-height: 24px;
   color: black;
 }
@@ -469,7 +470,7 @@ footer {
 footer .footer {
   background: white;
   padding: 10px;
-  clip-path: polygon(0% 5%, 15% 0%, 100% 10%, 100% 100%, 0% 100%);
+  clip-path: polygon(5% 5%, 15% 5%, 100% 10%, 100% 100%, 0% 100%);
 }
 
 .content {
