--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ align-items: center;
 
 /* Footer */
 footer {
-  background: green;
+  background: rgba(0,128,0,.5);
   line-height: 24px;
   color: black;
 }
@@ -470,7 +470,7 @@ footer {
 footer .footer {
   background: white;
   padding: 10px;
-  clip-path: polygon(5% 5%, 15% 5%, 100% 10%, 100% 100%, 0% 100%);
+  clip-path: polygon(5% 6%, 15% 5%, 100% 10%, 100% 100%, 0% 100%);
 }
 
 .content {
