--- a/style.css
+++ b/style.css
@@ -333,33 +333,44 @@ nav {
     ),
     url(imgs/kidsimage.jpeg) center no-repeat;
   background-size: cover;
-  height: 93vh;
+  width: 100vw;
+  height: 100vh;
   font-family: "Cormorant Garamond", serif;
+  position: relative;
+  padding: 0;
+  margin: 0;
 }
 
 .header-text {
   letter-spacing: 0.1rem;
   color: var(--Primary-color);
-  padding-top: 15rem;
-  padding-left: 5rem;
-  width: 100vw;
-  height: 77vh;
+  display: grid;
+  grid-template-columns: repeat(1, 1000px);
+  grid-template-rows: repeat(1, 500px);
+  justify-content: flex-start;
+  padding: 50px;
+  align-items: center;
   text-transform: uppercase;
-  align-items: left ;
+  width: 100%;
+  height: 50%;
+  
+  /*position: relative;*/
 }
 
 .heading {
   font-size: 4rem;
-  position: relative;
+ /* position: relative;*/
+  width: 50%;
+
   
 }
 
-.heading-paragraph {
+/*.heading-paragraph {
   font-size: 1rem;
   font-weight: 500;
   color: var(--Primary-color);
-  max-width: 70rem;
-}
+  max-width: 100%;
+}*/
 
 .reachout-box {
  display: flex;
@@ -367,7 +378,7 @@ nav {
  justify-content: center;
  align-items: center;
  position: absolute;
- top: 250px;
+ top: 180px;
  right: 150px;
  box-sizing: border-box;
  box-shadow: 0px 0px 10px 0px #666666;
@@ -424,6 +435,14 @@ padding: 15px;
   background: rgb(241, 209, 148);
 }
 
+.header-button-flex {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  bottom: 100px;
+}
+
 .header-button {
   border-style: none;
   background: rgb(241, 209, 148);
@@ -431,15 +450,9 @@ padding: 15px;
   border: solid 1px;
   padding: 5px;
   width: 100px;
-  position: absolute;
-  bottom: 25px;
   border-radius: 15px;
   outline: none;
   font-family: "Cormorant Garamond", serif;
-}
-
-.button-area {
-  padding-top: 165px;
 }
 
 .header-button:hover,
@@ -451,7 +464,6 @@ padding: 15px;
   outline: none;
   outline-style: none;
 }
-
 /* Enf of header */
 
 /* Footer */
